<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_margin="17dp"
    android:background="@drawable/bg_mock_location_dialog">

    <ImageView
        android:id="@+id/ivWarning"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_location_warning" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/mock_location_detected"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="14dp">
        <View
            android:layout_width="80dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="@color/red"
            android:layout_marginEnd="10dp"/>

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:background="@drawable/verygoodemoji1"
            android:backgroundTint="@color/red"/>

        <View
            android:layout_width="80dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="@color/red"
            android:layout_marginStart="10dp"/>

    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:text="@string/mock_location_message"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:lineSpacingExtra="4dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/mock_location_security_message"
        android:textSize="15sp"
        android:lineSpacingExtra="4dp" />

    <!-- Warning Information Box -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical"
        android:background="@drawable/bg_mock_location_info">

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginEnd="14dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_security_warning" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="What you can do:"
                android:textColor="#E00000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/mock_location_action"
                android:textColor="@color/black"
                android:textSize="13.5sp"
                android:lineSpacingExtra="3dp" />

        </LinearLayout>

    </LinearLayout>

    <!-- Open Settings -->
    <LinearLayout
        android:id="@+id/btnOpenSettings"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:layout_marginTop="22dp"
        android:background="@drawable/background_red">

        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:src="@drawable/white_setting"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_settings"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"/>

    </LinearLayout>
    <!--<com.google.android.material.button.MaterialButton
        android:id="@+id/btnOpenSettings"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="22dp"
        android:text="@string/open_settings"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:icon=""
        app:iconGravity="textStart"
        app:iconPadding="6dp"
        app:iconTint="@android:color/white" />-->

    <!-- Close App -->
    <TextView
        android:id="@+id/btnCloseApp"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/close_app"
        android:textColor="#cf262e"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>